[gd_scene load_steps=10 format=2]

[ext_resource path="res://fonts/font-1-export.fnt" type="BitmapFont" id=1]
[ext_resource path="res://characters/head/13.png" type="Texture" id=2]
[ext_resource path="res://Dialogue.gd" type="Script" id=3]
[ext_resource path="res://hud/part-2.png" type="Texture" id=4]
[ext_resource path="res://hud/part-1.png" type="Texture" id=5]

[sub_resource type="Animation" id=1]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/path = NodePath("../..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 164, -64 ), Vector2( 250, -64 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath("../..")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_label"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "fade_out_to_in"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("../..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OkButton:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=3]
resource_name = "fade_out_to_in2"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("../..:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("../..")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "change_loadout"
} ]
}

[sub_resource type="Animation" id=4]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 164, -64 ), Vector2( 164, -68 ), Vector2( 164, -64 ) ]
}

[node name="Dialogue_Box" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 80.0
margin_top = 68.0
margin_right = -80.0
margin_bottom = -112.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -119.0
margin_top = -108.0
margin_right = 130.0
margin_bottom = 132.0
color = Color( 0, 0, 0, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Left" type="TextureRect" parent="."]
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -5.0
margin_right = 15.0
margin_bottom = 12.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Right" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -22.0
margin_top = -5.0
margin_right = 54.0
margin_bottom = 12.0
texture = ExtResource( 5 )
expand = true
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Middle" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -5.0
margin_right = -6.0
margin_bottom = 5.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_top = 23.0
margin_right = -9.0
margin_bottom = -15.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dialogue" type="RichTextLabel" parent="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 3.0
margin_right = -9.0
rect_clip_content = false
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/normal_font = ExtResource( 1 )
text = "Testing, testing, testing, testing, testing, testing, testing, testing, testing, testing, testing, testing..."
scroll_following = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Control/Dialogue"]
position = Vector2( 164, -64 )
scale = Vector2( 8, 8 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Control/Dialogue"]
anims/fade_out = SubResource( 1 )
anims/fade_out_to_in = SubResource( 2 )
anims/fade_out_to_in2 = SubResource( 3 )
anims/idle = SubResource( 4 )

[node name="OkButton" type="Button" parent="Control/Dialogue"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -17.0
margin_top = -6.0
margin_right = 17.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeepButton" type="Button" parent="Control/Dialogue"]
visible = false
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 63.0
margin_top = -6.0
margin_right = 141.0
margin_bottom = 15.0
custom_fonts/font = ExtResource( 1 )
text = "Keep"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeButton" type="Button" parent="Control/Dialogue"]
visible = false
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -141.0
margin_top = 35.0
margin_right = -63.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 1 )
text = "Change"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Control/Dialogue"]
margin_left = -5.0
margin_top = -43.0
margin_right = 106.0
margin_bottom = -28.0
custom_fonts/font = ExtResource( 1 )
text = "-Xavier-"
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="Control/Dialogue"]
wait_time = 0.05
autostart = true
[connection signal="animation_finished" from="Control/Dialogue/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="pressed" from="Control/Dialogue/OkButton" to="." method="_on_OkButton_pressed"]
[connection signal="pressed" from="Control/Dialogue/KeepButton" to="." method="_on_KeepButton_pressed"]
[connection signal="pressed" from="Control/Dialogue/ChangeButton" to="." method="_on_ChangeButton_pressed"]
[connection signal="timeout" from="Control/Dialogue/Timer" to="." method="_on_Timer_timeout"]
